# rl-fzerox

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  doctor  fzerox  install  published_checkpoints.json  pyproject.toml  pyrightconfig.json
checkpoints/: README.md
checkpoints/baselines/: mute-city-novice-blue-falcon-balanced-go-window.state
checkpoints/mute-city-3steer-recurrent-ppo-v1/: baseline.state  best_policy.metadata.json  train_config.yaml
conf/: train.yaml  train_base.yaml  train_ppo_base.yaml  train_sac_base.yaml  watch.yaml
conf/curriculum/: drift_after_finish.yaml  entropy_decay.yaml  lean_after_finish.yaml  none.yaml  shoulder_after_finish.yaml
conf/local/: train.local.base.yaml  train.local.example.yaml  train.local.ppo_hybrid.yaml  train.local.ppo_hybrid_recurrent.yaml  train.local.ppo_maskable.example.yaml  train.local.ppo_maskable.yaml  train.local.ppo_maskable_hybrid.yaml  train.local.ppo_maskable_hybrid_recurrent.yaml  train.local.ppo_maskable_recurrent.yaml  train.local.recurrent.yaml  train.local.sac.yaml  watch.local.example.yaml
conf/presets/: local_runtime.yaml  train.maskable_hybrid_ppo.yaml  train.maskable_hybrid_recurrent_ppo.yaml  train.maskable_ppo.yaml  train.maskable_recurrent_ppo.yaml  train.sac.yaml
conf/reward/: race_v2.yaml  race_v3.yaml  race_v4.yaml  reward_main.yaml
conf/vehicles/: blue_falcon.yaml
docs/: architecture.md  contributing.md  index.md  observation_pipeline.md  runtime_assets.md
docs/concepts/: baselines.md  courses.md  engine_tuning.md  policy_inputs.md  ppo.md  x_cup.md
docs/reward_shaping/: RACE_V2.md  RACE_V3.md  reward_main.md
rust/: bindings.rs  core.rs  lib.rs
rust/bindings/: emulator.rs  error.rs  input.rs  observation.rs  payload.rs  probe.rs  rom.rs  video.rs
rust/core/: api.rs  callbacks.rs  error.rs  game.rs  host.rs  info.rs  input.rs  libretro.rs  minimap.rs  mod.rs  observation.rs  options.rs  probe.rs  rom.rs  stdio.rs  video.rs
scripts/: check_numpy_typing.py  doctor.py  import_checkpoint_bundle.py  install.py  package_checkpoint_bundle.py  release_checkpoint_bundle.py
scripts/bench/: train_angrylion_10_env.sh  train_angrylion_10_env_noop_reset.sh  train_angrylion_4_env.sh  train_angrylion_4_env_noop_reset.sh  train_angrylion_single_env.sh  train_angrylion_single_env_noop_reset.sh  train_gliden64_10_env.sh  train_gliden64_10_env_noop_reset.sh  train_gliden64_4_env.sh  train_gliden64_4_env_noop_reset.sh  train_gliden64_single_env.sh  train_gliden64_single_env_noop_reset.sh  train_recurrent_angrylion_10_env.sh  train_recurrent_angrylion_10_env_noop_reset.sh  train_recurrent_gliden64_10_env.sh  train_recurrent_gliden64_10_env_noop_reset.sh
src/fzerox_emulator/: __init__.py  _native.pyi  arrays.py  base.py  boundary.py  buttons.py  control.py  emulator.py  frames.py  repeat.py  video.py
src/rl_fzerox/: __init__.py  _native.pyi
tests/: fakes.py  test_actions.py  test_config_loader.py  test_emulator.py  test_env.py  test_extractors.py  test_native_input.py  test_observations.py  test_probe.py  test_reward.py  test_seed.py  test_telemetry.py  test_training_artifacts.py  test_training_inference.py  test_training_runner.py  test_viewer.py
tests/apps/: test_career_mode.py  test_memory_probe.py  test_record_policy.py  test_run_manager_app.py  test_run_manager_engine_tuning_payload.py  test_run_manager_worker.py  test_save_snapshot.py  test_tensorboard_metrics.py  test_train.py  test_training_monitor.py  test_watch.py
tests/core/: test_boot.py  test_package_imports.py  test_seed.py
tests/support/: __init__.py  action_configs.py  fakes.py  native_objects.py
tests/ui/: __init__.py  career_mode_recording_support.py  test_auxiliary_metrics.py  test_career_mode_debug.py  test_career_mode_loop_commands.py  test_career_mode_loop_runtime.py  test_career_mode_loop_terminal.py  test_career_mode_menu_controls.py  test_career_mode_recording.py  test_career_mode_recording_finalizer.py  test_career_mode_recording_frames.py  test_career_mode_recording_paths.py  test_career_mode_recording_segments.py  test_career_mode_worker.py  (+38 more)
(+2335 files in other folders)
