[package]
name = "rl-fzerox-native"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "_native"
path = "rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.6"
fast_image_resize = "6.0"
libc = "0.2"
libloading = "0.9.0"
libretro-sys = "0.1.1"
numpy = "0.28"
pyo3 = { version = "0.28.3", features = ["extension-module"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "debuginfo"
