[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rl-fzerox"
version = "0.1.0"
description = "Experimental RL tooling for training an agent on F-Zero X"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Thomas" }]
dependencies = [
  "gymnasium>=0.29,<1.1",
  "hydra-core>=1.3,<2",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "maturin>=1.12,<2",
  "pyright>=1.1.390,<2",
  "pytest>=8,<9",
  "ruff>=0.11.0,<0.12",
]
watch = [
  "imageio-ffmpeg>=0.5,<1",
  "pygame>=2.5,<3",
]
train = [
  "rich>=13,<15",
  "sb3-contrib>=2.8,<3",
  "stable-baselines3>=2.6,<3",
  "tensorboard>=2.18,<3",
  "tqdm>=4.66,<5",
]

[project.scripts]
fzerox-probe = "rl_fzerox.apps.probe:main"
fzerox-smoke = "rl_fzerox.apps.smoke:main"
fzerox-train = "rl_fzerox.apps.train:main"
fzerox-watch = "rl_fzerox.apps.watch:main"
fzerox-record-policy = "rl_fzerox.apps.record_policy:main"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "ANN401",
  "B",
  "E",
  "F",
  "I",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.maturin]
bindings = "pyo3"
module-name = "fzerox_emulator._native"
python-source = "src"
